add python snippet

--- a/docs/docs/integrations/platforms/google.mdx
+++ b/docs/docs/integrations/platforms/google.mdx
@@ -136,6 +136,9 @@ pip install langchain-google-alloydb-pg
 
 See [usage example](/docs/integrations/memory/alloydb_vector_store).
 
+```python
+from langchain_google_alloydb_pg import AlloyDBVectorStore
+```
 
 ### Google BigQuery Vector Search
 
@@ -249,6 +252,9 @@ pip install langchain-google-alloydb-pg
 
 See [usage example](/docs/integrations/memory/alloydb_document_loader).
 
+```python
+from langchain_google_alloydb_pg import AlloyDBLoader
+```
 
 ### Google BigQuery
 
@@ -544,6 +550,10 @@ pip install langchain-google-alloydb-pg
 ```
 
 See [usage example](/docs/integrations/memory/alloydb_chat_message_history).
+
+```python
+from langchain_google_alloydb_pg import AlloyDBChatMessageHistory
+```
 
 ### Cloud Firestore
 
